# CS598_Final_Project_ChristinePark

./: .cache.sqlite  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  Snakefile  config.yaml  docker-compose.yaml  pyproject.toml
docs/: metadata.jsonld
metadata/: dataset.jsonld
scripts/: combine_rides_weather.py  compute_zone_coordinates.py  fetch_ride_data.py  fetch_weather_data.py  fetch_zones_zip.py  make_zones_lookup.py  transform_rides_data.py
